# Rust-Interpreter

./: Cargo.toml  README.md  examples.txt  pa+i%r_-prelude0  prelude.tifl  prelude.tifl.old  test.tifl
src/: ast.rs  env.rs  error.rs  eval.rs  lexer.rs  lib.rs  loader.rs  main.rs  parser.rs  typecheck.rs  types.rs
tests/: lexer_test.rs  parser_test.rs  tests_prelude_integration.rs  tifl_language_tests.rs
